Fixing footer links being too wide in some screens

--- a/style-global.css
+++ b/style-global.css
@@ -47,32 +47,52 @@ header {
 
 footer {
     margin-top: 50px;
-    width: 100vw;
+    width: 100%;
     max-width: 100vw;
 
     background-color: rgba(20,35,35,0.7);
     color: white;
     border-top: 5px solid black;
     position: relative;
+
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    /*display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr auto;*/
-    column-gap:20px;
+    flex-direction: column;
     row-gap:20px;
 
     padding-inline: 7.5%;
     padding-block: 30px;
     box-sizing: border-box;
 
+    #footerContents {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        /*display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: 1fr auto;*/
+        row-gap:20px;
+        border: 3px solid white;
+    }
+
     #footerRightSide {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 20px;
+        border: 2px solid red;
         .socials a:active {color: cyan}
+        width: max-content;
+        min-width: 60%;
         flex-grow: 2;
+        flex-shrink: 0;
+        flex-basis: 0;
+
+        >#footerRightSideContents {
+            min-width: 100%;
+            border: 1px solid blue;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            grid-auto-flow: row;
+            grid-auto-rows: auto;
+            gap: 20px;
+        }
     }
 
     #footerLeftSide {
@@ -85,6 +105,7 @@ footer {
         gap: 20px;
         grid-auto-flow: row;
         flex-grow: 1;
+        flex-basis: 0;
     }
 
     .footerNotice {
@@ -96,12 +117,14 @@ footer {
 
     #footerLogoContainer {
         justify-self: flex-start;
+        align-self: flex-start;
         #footerLogo {
             max-width: 80px;
         }
     }
 
     #backgroundSelector {
+        margin-right: 60px;
         justify-self: flex-end;
         align-self: flex-start;
         display: flex;
